<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!--  DONE: Add image for home screen logo. -->
        <ImageView
            android:id="@+id/ballotLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:contentDescription="@string/logo_content_description"
            app:layout_constraintBottom_toTopOf="@+id/upcomingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ballot_logo" />

        <!--  DONE: Add Button to navigate to upcoming elections. -->
        <Button
            android:id="@+id/representativeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/representative_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/button_style"/>

        <!--  DONE: Add Button to navigate to representatives. -->
        <Button
            android:id="@+id/upcomingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_button"
            app:layout_constraintBottom_toTopOf="@+id/representativeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/button_style" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>